k10/k10-k3s-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k10-k3s.aandd.io
  namespace: kasten-io
spec:
  ingressClassName: kong
  rules:
  - host: k10-k3s.aandd.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway
            port:
              number: 8000
